--- a/浙江大学 专业课.tex
+++ b/浙江大学 专业课.tex
@@ -33,7 +33,7 @@
 	{\Huge\bf 浙江大学攻读硕士学位\\
 		研究生入学考试业务课试题\\}
 	\vspace{\stretch{1}}
-	{\huge [819] 数学分析}\\
+	{\huge [819] 数学qq分析}\\
 	\vspace{\stretch{1}}
 	浙江大学二〇〇八年攻读硕士学位研究生入学考试试题 [819] 数学分析\\
 	浙江大学二〇〇九年攻读硕士学位研究生入学考试试题 [819] 数学分析\\
@@ -105,7 +105,7 @@
 		      \item 讨论~$f(x,y)$~在其他点处的连续可微情况, 并说明理由.
 	      \end{enumerate}
 	      \vspace{2em}
-	\item (15分) 设~$f$~是连续啊啊函数, 证明:
+	\item (15分) 设~$f$~是连续函数, 证明:
 	      \[\iiint\limits_{x^2+y^2+z^2\leqslant 1} f(ax+by+cz)\ud{z}\ud{y}\ud{z}=\pi\int_{-1}^{1}(1-u^2)f(ku)\ud{u},\]
 	      其中~$k=\sqrt{a^2+b^2+c^2}$.
 	      \vspace{2em}
