--- a/浙江大学 专业课.tex
+++ b/浙江大学 专业课.tex
@@ -33,7 +33,7 @@
 	{\Huge\bf 浙江大学攻读硕士学位\\
 		研究生入学考试业务课试题\\}
 	\vspace{\stretch{1}}
-	{\huge [819] 数学qq分析}\\
+	{\huge [819] 数学分析}\\
 	\vspace{\stretch{1}}
 	浙江大学二〇〇八年攻读硕士学位研究生入学考试试题 [819] 数学分析\\
 	浙江大学二〇〇九年攻读硕士学位研究生入学考试试题 [819] 数学分析\\
