--- a/谢惠民.tex
+++ b/谢惠民.tex
@@ -1,6 +1,8 @@
-%pdf latex
-\documentclass[UTF8,a4paper,11pt]{article}
+%Latex utf-8
+\documentclass[UTF8,a4paper,10pt,twoside]{book}
 \usepackage{CTEX}
+\usepackage[top=1in, bottom=1in, left=1in, right=1in]{geometry}
+\usepackage{tablists}
 \usepackage{amsmath}
 \usepackage{amsfonts}
 \usepackage{amsthm}
@@ -8,20 +10,108 @@
 \usepackage{bm}
 \usepackage{extarrows}
 \usepackage{enumerate}
-\usepackage{fancyhdr}
-\usepackage{fancybox}
-\usepackage{geometry}
-\geometry{textwidth=16.5cm,textheight=25cm} 
+\usepackage{titlesec}
+\usepackage{graphicx}
+\pagestyle{empty}
 \begin{document}
-\renewcommand{\headrulewidth}{0pt}
-\pagestyle{fancy}
-\fancyfoot[C]{第~\thepage~页, 共~2~页}
-\newcommand{\sh}{\mathrm{sh}}
-\renewcommand{\Im}{\mathrm{Im}}
-\newcommand{\rank}{\mathrm{rank}}
-\renewcommand{\i}{\mathrm{i}}
-\newcommand{\e}{\mathrm{e}}
-\newcommand{\ud}[1]{\mathrm{d}#1}
-\newcommand{\sgn}{\mathrm{sgn}}
-\renewcommand{\emptyset}{\varnothing}
+\setlength\abovedisplayskip{2pt}
+\setlength\belowdisplayskip{2pt}
+\begin{titlepage}
 
+	\begin{center}
+		\vfill
+		% Upper part of the page
+		{\Huge \bfseries 数学分析习题课讲义}\\[1.5cm]
+		% Title
+		{\LARGE \bfseries 参考答案}\\[0.4cm]
+		\vfill
+	\end{center}
+
+\end{titlepage}
+\renewcommand{\proofname}{\bf 证明}
+
+\setcounter{chapter}{1}
+\chapter{数列极限}
+\section{数列极限的基本概念}
+\subsection{思考题}
+\kaishu
+\begin{enumerate}
+	\item 数列收敛有很多等价定义. 例如:
+	      \begin{enumerate}[(1)]
+		      \item 数列~$\{a_n\}$~收敛于~$a$~$\Longleftrightarrow$~$\forall\varepsilon>0,\exists N\in\mathbf{N}_{+},\forall n\geqslant N$, 成立~$|a_n-a|<\varepsilon$;
+		      \item 数列~$\{a_n\}$~收敛于~$a$~$\Longleftrightarrow$~$\forall m\in\mathbf{N}_{+},\exists N\in\mathbf{N}_{+},\forall n>N$, 成立~$|a_n-a|<1/m$;\footnote{有些像级数的~Weierstrass-M~判别法, 事实上也可以用~Cauchy~收敛准则给出一个和~Weierstrass-M~判别法类似的证明. 本条是所有二分法/三分法证明的基础.}
+		      \item 数列~$\{a_n\}$~收敛于~$a$~$\Longleftrightarrow$~$\forall\varepsilon>0,\exists N\in\mathbf{N}_{+},\forall n>N$, 成立~$|a_n-a|<K\varepsilon$. 其中~$K$~是一个与~$\varepsilon$~和~$n$~无关的正常数.
+	      \end{enumerate}
+	      试证明以上定义与数列收敛等价.
+
+	      \begin{proof}
+		      \begin{enumerate}[(1)]
+			      \item $\Rightarrow$ 取~$N=N_0+1$. $\Leftarrow$ 显然.
+			      \item $\Rightarrow$ 取~$\varepsilon=1/m, m\in\mathbf{N}_{+}$. $\Leftarrow$ 由于~$\lim\limits_{m\to\infty} 1/m=0$, 故存在~$M\in\mathbf{N}_{+}$, 当~$m>M$~时, $1/m<\varepsilon$. 选定~$m$, 使用定义, 存在$N_0\in\mathbf{N}_{+}$, $\forall n>N$, 有~$|a_n-a|<1/m<\varepsilon$.
+			      \item $\Rightarrow$ 取~$K=1$. $\Leftarrow$ 取~$\varepsilon'=\varepsilon/K$, 则~$\exists N\in\mathbf{N}_{+}, \forall n>N, |a_n-a|<K\varepsilon'=\varepsilon$.\qedhere
+		      \end{enumerate}
+	      \end{proof}
+
+	\item 问: 在数列收敛的定义中, $N$~是否是~$\varepsilon$~的函数?
+	      \begin{proof}[\bf 答]
+		      否. 对于任意的~$\varepsilon$, 存在一个~$N_0\in\mathbf{N}_{+}$, 使得当~$n>N_0$~时都有~$|a_n-a|<\varepsilon$, 而~$\forall N>N_0$~都可以是符合定义的~$N$, 即每一个~$\varepsilon$~都可以对应无穷多个~$N$, 故不是.\qedhere
+	      \end{proof}
+	\item 判断: 若~$\{a_n\}$~收敛, 则有~$\lim\limits_{n\to\infty} (a_{n+1}-a_n)=0$~和~$\lim\limits_{n\to\infty} a_{n+1}/a_n=1$.
+	      \begin{proof}[\bf 答]
+		      $\lim\limits_{n\to\infty} (a_{n+1}-a_n)=0$. 对于任意给定的~$\varepsilon>0$, 存在~$N>0$, 当~$n>N$时有~$|a_n-a|<\varepsilon/2$, 从而~$|a_{n+1}-a|<\varepsilon/2$, 于是对于~$n>N$,
+		      \[|a_{n+1}-a_n|\leqslant|a_{n+1}-a|+|a_n-a|<\varepsilon/2+\varepsilon/2=\varepsilon.\]
+
+		      $\lim\limits_{n\to\infty} a_{n+1}/a_n=1$. 举一反例~$\{(-1)^n 1/n\}$, 显然~$\lim\limits_{n\to\infty} (-1)^n1/n=0$, 但
+		      \[\lim\limits_{n\to\infty}\dfrac{(-1)^{n+1} 1/(n+1)}{(-1)^n 1/n}=\lim\limits_{n\to\infty} -1\cdot\dfrac{n}{n+1}=-1.\]\qedhere
+	      \end{proof}
+	\item 设收敛数列~$\{a_n\}$~的每一项都是整数, 问: 该数列有什么特殊性质?
+	      \begin{proof}[\bf 答]
+		      从某一项开始后每一项均相同. 取~$\varepsilon=1/2$, 则存在~$N\in\mathbf{N}_{+}$, 使对~$n>N$~有~$|a_{n+1}-a_n|<1/2$, 注意到~$a_n\in\mathbf{Z}, n\in\mathbf{N}_{+}$, 知~$a_{n+1}=a_n, \forall n>N$.\qedhere
+	      \end{proof}
+	\item 问: 收敛数列是否一定是单调数列? 无穷小量是否一定是单调数列?
+	      \begin{proof}[\bf 答]
+		      均不一定. 如分别取~$\{a+(-1)^n 1/m\}$(收敛但不单调)~和~$\{(-1)^n 1/n\}$(无穷小量但不单调). \qedhere
+	      \end{proof}
+	\item \footnote{原本的6题中, 一个很小很小的量显然不是一个无穷小量, 注意无穷小量是一个趋于零的极限过程即可.}问: 正无穷大量数列是否一定单调增加? 无界数列是否一定为无穷大量?
+	      \begin{proof}[\bf 答]
+		      均不一定. 如分别取~$\{n+2\sin{n}\}$(正无穷大量但不单调)~和~$\{n\cdot\sin{n}\}$(无界但非无穷大). \qedhere
+	      \end{proof}
+	\item 问: 如果数列~$\{a_n\}$~收敛于~$a$, 那么绝对值~$|a_n-a|$~是否随着~$n$~的增加而单调减少趋于~$0$?
+	      \begin{proof}[\bf 答]
+		      不一定. 如取~$\{a_n\}$~为形如
+		      \[1,1/2,1/3,1/6,1/4,1/8,1/12,\cdots,1/n,1/2n,\cdots,1/n(n-1),1/(n+1),\cdots\]
+		      的数列, 由于~$1/n$~和~$1/(n+1)$~之间的所有项都严格小于~$1/(n+1)$, 于是~$\{a_n\}$~的上控数列\footnote{请结合数列的上下极限部分.}~$\{\overline{a_n}\}$~为~$1,1/2,1/3,1/4,1/4,\cdots$, 其中~$1/n$~连续出现了~$n-3$~次($n\geqslant3$), 显然~$\lim\limits_{n\to\infty}\overline{a_n}=0$. 而全为正项的数列~$\{a_n\}$~有一个子列~$\{1/n\}$~收敛于~$0$, 故
+		      \[\varliminf\limits_{n\to\infty} a_n=\varlimsup\limits_{n\to\infty} a_n=0.\]
+		      即~$\lim\limits_{n\to\inf}a_n=0$, 但显然~$\{|a_n|\}$~并不单调.\qedhere
+	      \end{proof}
+	\item 判断: 非负数列的极限是非负数, 正数列的极限是整数.
+	      \begin{proof}[\bf 答]
+		      非负数列的极限是非负数. 反证法. 假设非负数列~$\{a_n\}$~的极限为~$A<0$, 则存在~$N\in\mathbf{N}_{+}$, 当~$n>N$~时有~$|a_n-A|<-A/2$, 即当~$n>N$~时有~$3A/2<a_n<A/2<0$, 与~$\{a_n\}$~非负矛盾.
+
+		      正数列的极限不一定为正数, 如取~$\{1/n\}$, 其极限为~$0$.\qedhere
+	      \end{proof}
+\end{enumerate}
+
+\subsection{练习题}
+\begin{enumerate}
+	\item 按极限定义证明:
+	      \begin{tabenum}[(1)]
+		      \tabenumitem $\lim\limits_{n\to\infty} \dfrac{3n^2}{n^2-4}=3;$
+		      \tabenumitem $\lim\limits_{n\to\infty} \dfrac{\sin{n}}{n}=0;$\\
+		      \tabenumitem $\lim\limits_{n\to\infty} (1+n)^{\frac{1}{n}}=1;$
+		      \tabenumitem $\lim\limits_{n\to\infty} \dfrac{a^n}{n!}=0.$
+	      \end{tabenum}
+	      \begin{proof}
+		      对于任何~$\varepsilon>0$,
+		      \begin{enumerate}[(1)]
+			      \item 取~$N=[\sqrt{12/\varepsilon+4}]$, 当~$n>N$~时, $|\dfrac{3n^2}{n^2-4}-3|=\dfrac{12}{n^2-4}<\varepsilon;$
+			      \item 取~$N=[1/\varepsilon]$, 当~$n>N$~时, $|\dfrac{\sin{n}}{n}\leqslant\dfrac{1}{n}<\varepsilon;$
+			      \item 由于~$(1+n)^{\frac{1}{n}}>1, \forall n\in\mathbf{N}_{+}$, 故令~$y_n=(1+n)^{\frac{1}{n}}-1>0$, 有$n+1=(1+y_n)^n\geqslant \dfrac{n(n-1)}{2}y_n^2$, 即
+			            \[\sqrt[n]{n+1}-1=y_n\leqslant\sqrt{\dfrac{2(n+1)}{n(n-1)}}.\]
+			            又由~$\lim\limits_{n\to\infty}\dfrac{2(n+1)}{n(n-1)}$, 故存在~$N\in\mathbf{N}_{+}$, 使当~$n>N$~时有~$\dfrac{2(n+1)}{n(n-1)}<\varepsilon<1$, 故当~$n>N$~时有
+			            \[\sqrt[n]{n+1}-1=y_n\leqslant\sqrt{\dfrac{2(n+1)}{n(n-1)}}<\sqrt{\varepsilon}<\varepsilon;\]
+\item 
+		      \end{enumerate}
+	      \end{proof}
+\end{enumerate}
+\end{document}
