--- a/谢惠民.tex
+++ b/谢惠民.tex
@@ -110,7 +110,7 @@
 			            \[\sqrt[n]{n+1}-1=y_n\leqslant\sqrt{\dfrac{2(n+1)}{n(n-1)}}.\]
 			            又由~$\lim\limits_{n\to\infty}\dfrac{2(n+1)}{n(n-1)}$, 故存在~$N\in\mathbf{N}_{+}$, 使当~$n>N$~时有~$\dfrac{2(n+1)}{n(n-1)}<\varepsilon<1$, 故当~$n>N$~时有
 			            \[\sqrt[n]{n+1}-1=y_n\leqslant\sqrt{\dfrac{2(n+1)}{n(n-1)}}<\sqrt{\varepsilon}<\varepsilon;\]
-\item 
+			      \item 若
 		      \end{enumerate}
 	      \end{proof}
 \end{enumerate}
