--- a/谢惠民.tex
+++ b/谢惠民.tex
@@ -202,28 +202,72 @@
 		      \item $\lim\limits_{n\to\infty} \left(1-\dfrac{1}{2^2}\right)\left(1-\dfrac{1}{3^2}\right)\cdots\left(1-\dfrac{1}{n^2}\right)$;
 		      \item $\lim\limits_{n\to\infty} \left(1-\dfrac{1}{1+2}\right)\left(1-\dfrac{1}{1+2+3}\right)\cdots\left(1-\dfrac{1}{1+2+\cdots+n}\right)$;
 		      \item $\lim\limits_{n\to\infty} \left(\dfrac{1}{1\cdot2\cdot3}+\dfrac{1}{2\cdot3\cdot4}+\cdots+\dfrac{1}{n(n+1)(n+2)}\right)$;
-		      \item $\lim\limits_{n\to\infty} \sum\limits_{k=1}^{\infty}\dfrac{1}{k(k+1)\cdots(k+\nu)}$, 其中~$\nu\in\mathbf{N}_{+}, \nu>1$.\\
+		      \item $\lim\limits_{n\to\infty} \sum\limits_{k=1}^{n}\dfrac{1}{k(k+1)\cdots(k+\nu)}$, 其中~$\nu\in\mathbf{N}_{+}, \nu>1$.\\
 		            (最后两个题是$\lim\limits_{n\to\infty} \left(\dfrac{1}{1\cdot2}+\dfrac{1}{2\cdot3}+\cdots+\dfrac{1}{n(n+1)}\right)$~的推广.)
 	      \end{enumerate}
 	      \begin{proof}
 		      \begin{enumerate}[(1)]
 			      \item $\begin{aligned}[t]
-					            (1+x)(1+x^2)\cdots(1+x^{2^n})= & \dfrac{(1+x)(1-x)(1+x^2)\cdots(1+x^{2^n})}{1-x}                 \\
-					            =                              & \dfrac{(1-x^2)(1+x^2)\cdots(1+x^{2^n})}{1-x}                    \\
-					            =                              & \cdots=\dfrac{1-x^{2^{n+1}}}{1-x}\to\dfrac{1}{1-x} (n\to\infty)
+					            (1+x)(1+x^2)\cdots(1+x^{2^n})= & \dfrac{(1+x)(1-x)(1+x^2)\cdots(1+x^{2^n})}{1-x}                   \\
+					            =                              & \dfrac{(1-x^2)(1+x^2)\cdots(1+x^{2^n})}{1-x}                      \\
+					            =                              & \cdots=\dfrac{1-x^{2^{n+1}}}{1-x}\to\dfrac{1}{1-x} \ (n\to\infty)
 				            \end{aligned}$
 			      \item $\begin{aligned}[t]
 					            \left(1-\dfrac{1}{2^2}\right)\left(1-\dfrac{1}{3^2}\right)\cdots\left(1-\dfrac{1}{n^2}\right)= & \left(1-\dfrac{1}{2}\right)\left(1+\dfrac{1}{2}\right)\left(1-\dfrac{1}{3}\right)\left(1+\dfrac{1}{3}\right)\cdots\left(1-\dfrac{1}{n}\right)\left(1+\dfrac{1}{n}\right) \\
-					            =                                                                                              & \dfrac{1}{2}\cdot\dfrac{3}{2}\cdot\dfrac{2}{3}\cdot\dfrac{4}{3}\cdots\dfrac{n-1}{n}\cdot\dfrac{n+1}{n}                                                                                       \\
-					            =                                                                                              & \dfrac{1}{2}\dfrac{n+1}{n}\to\dfrac{1}{2} (n\to\infty)
+					            =                                                                                              & \dfrac{1}{2}\cdot\dfrac{3}{2}\cdot\dfrac{2}{3}\cdot\dfrac{4}{3}\cdots\dfrac{n-1}{n}\cdot\dfrac{n+1}{n}                                                                   \\
+					            =                                                                                              & \dfrac{1}{2}\dfrac{n+1}{n}\to\dfrac{1}{2} \ (n\to\infty)
+				            \end{aligned}$
+			      \item $\begin{aligned}[t]
+					            \left(1-\dfrac{1}{1+2}\right)\left(1-\dfrac{1}{1+2+3}\right)\cdots\left(1-\dfrac{1}{1+2+\cdots+n}\right)= & \dfrac{2}{1+2}\cdot\dfrac{2+3}{1+2+3}\cdots\dfrac{2+\cdots+n}{1+2+\cdots n}                     \\
+					            =                                                                                                         & \dfrac{1\cdot4}{2\cdot3}\cdot\dfrac{2\cdot5}{3\cdot4}\cdot\cdots\cdot\dfrac{(n-1)(n+2)}{n(n+1)} \\
+					            =                                                                                                         & \dfrac{2!(n-1)!(n+2)!}{3!n!(n+1)!}                                                              \\
+					            =                                                                                                         & \dfrac{n+2}{3n}\to\dfrac{1}{3} \ (n\to\infty)
+				            \end{aligned}$
+			      \item $\begin{aligned}[t]
+					              & \dfrac{1}{1\cdot2\cdot3}+\dfrac{1}{2\cdot3\cdot4}+\cdots+\dfrac{1}{n(n+1)(n+2)}                                                                                                            \\
+					            = & \dfrac{1}{2}\left[\left(\dfrac{1}{1\cdot2}-\dfrac{1}{2\cdot3}\right)+\left(\dfrac{1}{2\cdot3}-\dfrac{1}{3\cdot4}\right)+\cdots+\left(\dfrac{1}{n(n+1)}-\dfrac{1}{(n+1)(n+2)}\right)\right] \\
+					            = & \dfrac{1}{4}-\dfrac{1}{2(n+1)(n+2)}\to\dfrac{1}{4} \ (n\to\infty)
+				            \end{aligned}$
+			      \item $\begin{aligned}[t]
+					            \sum\limits_{k=1}^{n}\dfrac{1}{k(k+1)\cdots(k+\nu)}= & \sum\limits_{k=1}^n\dfrac{1}{\nu}\left(\dfrac{1}{k(k+1)\cdots(k+\nu-1)}-\dfrac{1}{(k+1)(k+2)\cdots(k+\nu)}\right)                                    \\
+					            =                                                    & \dfrac{1}{\nu}\left(\dfrac{1}{1\cdot2\cdot\cdots\cdot\nu}-\dfrac{1}{(n+1)(n+2)\cdots(n+\nu)}\right)\to\dfrac{1}{\nu\cdot\nu!} \ (n\to\infty)\qedhere
 				            \end{aligned}$
 		      \end{enumerate}
 	      \end{proof}
 	\item 设~$s_n=a+3a^2+\cdots+(2n-1)a^n$, $|a|<1$, 求~$\{a_m\}$~的极限.\\
 	      (试计算~$s_n-as_n$.)
+	      \begin{proof}
+		      \begin{equation*}
+			      \begin{split}
+				      S_n   &= a+3a^2+\cdots+(2n-1)a^n;              \\
+				      aS_n  &= \qquad\; a^2+\cdots+(2n-3)a^n+(2n-1)a^{n+1}.
+			      \end{split}
+		      \end{equation*}
+		      上面两式相减, 有
+		      \[	(1-a)S_n=a+2(a^2+a^3+\cdots+a^n)-(2n-1)a^{n+1}=\dfrac{a(1+a)}{1-a}-(2n-1)a^{n+1}-\dfrac{2a^{n+1}}{1-a}.\]
+		      故
+		      \[S_n=\dfrac{a(1+a)}{(1-a)^2}-\dfrac{1}{1-a}\left((2n-1)a^{n+1}+\dfrac{2a^{n+1}}{1-a}\right)\to\dfrac{a(1+a)}{(1-a)^2}\ (n\to\infty).\]\qedhere
+	      \end{proof}
 	\item 设正数列~$\{x_n\}$~收敛, 极限大于~$0$, 证明: 这个数列有正下界, 但在数列中不一定有最小数.
+	      \begin{proof}
+		      设~$\lim\limits_{n\to\infty} x_n=A>0$, 则对~$\varepsilon=A/2>0$, $\exists N\in\mathbf{N}_{+}$, 当~$n>N$~时, $|x_n-A|<A/2$, 即当~$n>N$~时, $x_n>A/2$, 记~$M=\max\{x_1,x_2,\cdots,x_N, A/2\}$, 则~$x_n\geqslant M, \forall n\in\mathbf{N}_{+}$, 即~$M$~是~$\{x_n\}$~的一个正的下界.
+
+		      举一个无最小数的例子: $x_n=1+1/n, n\in\mathbf{N}_{+}$.\qedhere
+	      \end{proof}
 	\item 证明: 若有~$\lim\limits_{n\to\infty} a_n=+\infty$, 则在数列~$\{a_n\}$~中一定有最小数.
+	      \begin{proof}
+		      任取~$k\in\mathbf{N}_{+}$, 对于~$a_k$, $\exists N\in\mathbf{N}$, 当~$n>N$~时有~$a_n>a_k$. 取~$a=\min\{a_1,a_2,\cdots,a_N,a_k\}$, 则~$a\leqslant a_n, \forall n\in\mathbf{N}_{+}$, 同时~$a$~是~$\{a_n\}$~中的某一项, 故~$a$~是~$\{a_n\}$~中的最小数.\qedhere
+	      \end{proof}
 	\item 证明: 无界数列至少有一个子列是确定符号的无穷大量.
+	      \begin{proof}
+		      设~$\{x_n\}$~是无界数列, 不妨设其无上界, 即对任意~$M>0$, $\exists n\in\mathbf{N}_{+}$~使得~$x_n>M$.
+
+		      对于~$M_1=1$, $\exists n_1\in\mathbf{N}_{+}$, 使得~$x_{n_1}>1$;
+
+		      对于~$M_2=2$, $\exists n_2\in\mathbf{N}_{+}, n_2>n_1$, 使得~$x_{n_2}>2$, 断言这样的~$n_2$~是可以找到的, 否则~$\forall n>n_1$, $x_n\leqslant M_2$, 与~$\{x_n\}$~无界矛盾;
+
+		      假设已经找出了~$x_{n_k}$, 使得~$x_{n_k}>x_{n_{k-1}}$, $x_{n_{k}}>M_k=k$, 则对于~$M_{k+1}=k+1$, $\exists n_{k+1}\in\mathbf{N}_{+}, n_{k+1}>n_{k}$, 使得~$x_{n_{k+1}}>k+1$, 断言这样的~$n_{k+1}$~是可以找到的, 否则~$\forall n>n_k$, $x_n\leqslant M_{k+1}$, 与~$\{x_n\}$~无界矛盾. 由数学归纳法可知找出了数列~$\{x_{n_{k}}\}$~使得~$n_1<n_2<\cdots<n_k<n_{k+1}<\cdots$, $x_{n_k}>k, k\in\mathbf{N}_{+}$. 这说明~$\{x_{n_k}\}$~是~$\{x_n\}$~的子列, 并且~$\{x_{n_k}\}$~是正的无穷大量. 同理若~$\{x_n\}$~无下界时可找到一个子列是负的无穷大量.\qedhere
+	      \end{proof}
 	\item 证明: 数列~$\{\tan{n}\}$~发散.
 	\item 设数列~$\{S_n\}$~的定义为
 	      \[S_n=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{n^p}, n\in\mathbf{N}_{+}.\]
