--- a/谢惠民.tex
+++ b/谢惠民.tex
@@ -269,8 +269,117 @@
 		      假设已经找出了~$x_{n_k}$, 使得~$x_{n_k}>x_{n_{k-1}}$, $x_{n_{k}}>M_k=k$, 则对于~$M_{k+1}=k+1$, $\exists n_{k+1}\in\mathbf{N}_{+}, n_{k+1}>n_{k}$, 使得~$x_{n_{k+1}}>k+1$, 断言这样的~$n_{k+1}$~是可以找到的, 否则~$\forall n>n_k$, $x_n\leqslant M_{k+1}$, 与~$\{x_n\}$~无界矛盾. 由数学归纳法可知找出了数列~$\{x_{n_{k}}\}$~使得~$n_1<n_2<\cdots<n_k<n_{k+1}<\cdots$, $x_{n_k}>k, k\in\mathbf{N}_{+}$. 这说明~$\{x_{n_k}\}$~是~$\{x_n\}$~的子列, 并且~$\{x_{n_k}\}$~是正的无穷大量. 同理若~$\{x_n\}$~无下界时可找到一个子列是负的无穷大量.\qedhere
 	      \end{proof}
 	\item 证明: 数列~$\{\tan{n}\}$~发散.
+	      \begin{proof}
+		      \[
+			      \begin{split}
+				      |\tan(n+1)-\tan{n}|=&\left|\dfrac{\sin(n+1)}{\cos(n+1)}-\dfrac{\sin{n}}{\cos{n}}\right|\\
+				      =&\left|\dfrac{\sin(n+1)\cos{n}-\cos(n+1)\sin{n}}{\cos(n+1)\cos{n}}\right|\\
+				      =&\left|\dfrac{\sin{1}}{\cos(n+1)\cos{n}}\right|\\
+				      \geqslant&\sin{1},\ \forall n\in\mathbf{N}_{+}.
+			      \end{split}
+		      \]
+		      这说明~$\exists\varepsilon_0=\sin{1}$, $\forall N\in\mathbf{N}_{+}$, $\exists n>N$~使得~$|\tan(n+1)-\tan{n}|\geqslant\sin{1}>0$. 由~Cauchy~收敛准则知, $\{\tan{n}\}$~发散.\qedhere
+	      \end{proof}
 	\item 设数列~$\{S_n\}$~的定义为
 	      \[S_n=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{n^p}, n\in\mathbf{N}_{+}.\]
 	      证明: $\{S_n\}$~在以下两种情况均发散: (1)$p\leqslant 0$; (2)$0<p<1$.
+	      \begin{proof}
+		      当~$p\leqslant 0$~时, $S_{n+1}-S_n=\dfrac{1}{n^p}=\begin{cases}1, & p=0;\\ n^{-p}, & p<0.\end{cases}$ 由~Cauchy~收敛准则知~$\{S_n\}$~发散.\\
+
+		      当~$0<p<1$~时, 对于~$\forall n\in\mathbf{N}_{+}$, $\exists k\in\mathbf{N}_{+}$~使得~$2^k<n<2^{k+1}$, 故
+		      \[
+			      \begin{split}
+				      S_n\geqslant & S_{2^k}=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{2^{kp}}                                                                                         \\
+				      \geqslant        & 1+\dfrac{1}{2^p}+\left(\dfrac{1}{3^p}+\dfrac{1}{4^p}\right)\cdots+\left(\dfrac{1}{(2^{k-1}+1)^p}+\dfrac{1}{(2^{k-1}+2)^p}\cdots+\dfrac{1}{2^{kp}}\right) \\
+				      \geqslant        & 1+\dfrac{1}{2^p}+\dfrac{2}{4^p}+\cdots+\dfrac{2^{k-1}}{2^{kp}}                                                                                           \\
+				      =                & 1+\dfrac{1}{2}(2^{1-p}+2^{2(1-p)}+\cdots+2^{k(1-p)})                                                                                                     \\
+				      =                & 1+\dfrac{2^{1-p}}{2}\dfrac{2^{k(1-p)}-1}{2^{1-p}-1}\to+\infty\ (n\to\infty)
+			      \end{split}
+		      \]
+		      故~$\{S_n\}$~发散.\qedhere
+	      \end{proof}
+\end{enumerate}
+
+\section{单调数列}
+\begin{enumerate}
+	\item 若~$\{x_n\}$~单调, 则~$\{|x_n\}$~至少从某项开始后单调. 又问: 反之如何?
+	      \begin{proof}
+		      不妨设~$\{x_n\}$~单增.
+
+		      若~$x_n\leqslant 0, n=1,2,\cdots$, 则~$\{|x_n|\}$~是单调递减数列;
+
+		      若~$\exists n_0$~使得~$x_{n_0}>0$, 则在集合~$\{x_1, x_2,\cdots,x_{n_0}\}$~中必可找出~$n_1$~使得~$x_{n_1}<0<x_{n_1+1}$, 于是~$x_n>0, \forall n>n_1$, 又由于~$\{x_n\}$~单调递增, 知~$\{|x_n|\}$~从~$n_1$~项后单调递增.
+
+		      反之不成立. 举一反例, $x_n=(-1)^nn, n\in\mathbf{N}_{+}$, 则易知~$\{|x_n\}$~单调递增, 但~$\{x_n\}$~在任意项之后都不单调.\qedhere
+	      \end{proof}
+	\item 设~$\{a_n\}$~单调增加, ~$\{b_n\}$~单调减少, 且有~$\lim\limits_{n\to\infty} (a_n-b_n)=0$. 证明: $\{a_n\}$~和~$\{b_n\}$~都收敛, 且极限相等.
+	      \begin{proof}
+		      $\{a_n-b_n\}$~收敛从而有界, 即~$\exists M>0, \forall n\in\mathbf{N}_{+}, |a_n-b_n|\leqslant M$. 特别有~$a_n\leqslant b_n+M, \forall n\in\mathbf{N}_{+}$. 由于~$\{b_n\}$~单调减少, $a_n\leqslant b_1+M, \forall n\in\mathbf{N}_{+}$, 即~$\{a_n\}$~单调增加有上界~$b_1+M$, 故~$\{a_n`\}$~收敛. 同理可知~$\{b_n\}$~单调减少有下界~$a_1-M$, 故~$\{b_n\}$~也收敛. 由极限的四则运算法则, $\lim\limits_{n\to\infty} a_n-\lim\limits_{n\to\infty} b_n=\lim\limits_{n\to\infty} (a_n-b_n)=0$, 故~$\lim\limits_{n\to\infty} a_n=\lim\limits_{n\to\infty} b_n$.\qedhere
+	      \end{proof}
+	\item 按照极限的定义证明: 单调增加有上界的数列的极限不小于数列的任何一项, 单调减少有下界的数列的极限不大于数列极限的任何一项.
+	      \begin{proof}
+		      设~$\{x_n\}$~是单调增加有上界的数列, 由单调有界原理, ~$\{x_n\}$~收敛, 记~$\lim\limits_{n\to\infty} x_n=a$. 若~$\exists n_0\in\mathbf{N}_{+}$~使得~$x_{n_0}>a$, 则由~$\{x_n\}$~单调增加知~$\forall n\in\mathbf{N}_{+}, n>n_0$, $x_n\geqslant x_{n_0}>a$. 对于~$\varepsilon_0=\dfrac{x_{n_0}-a}{2}>0$, $x_n-a\geqslant x_{n_0}-a>\varepsilon$, 这与~$\lim\limits_{n\to\infty} x_n=a$~矛盾.
+
+		      设~$\{y_n\}$~是单调减少有下界的数列, 则~$\{-y_n\}$~是单调增加有上界的数列, 由单调有界原理, 若~$\lim\limits_{n\to\infty} y_n=b$, 则~$\lim\limits_{n\to\infty} -y_n=-b$. 由前可知, $\forall n\in\mathbf{N}_{+}, -y_n\leqslant-b$, 即~$\forall n\in\mathbf{N}_{+}, y_n\geqslant b$.\qedhere
+	      \end{proof}
+	\item 设~$x_n=\dfrac{2}{3}\cdot\dfrac{3}{5}\cdots\dfrac{n+1}{2n+1}, n\in\mathbf{N}_{+}$, 求数列~$\{x_n\}$~的极限.
+	      \begin{proof}
+		      易知~$\forall n\in\mathbf{N}_{+}, x_n>0$, 且~$\dfrac{x_n}{x_{n-1}}=\dfrac{n+1}{2n+1}<1, \forall n\in\mathbf{N}_{+}$. $\{x_n\}$~单调递减有下界, 故极限存在, 设为~$a$, 在递推式~$x_n=\dfrac{n+1}{2n+1}x_{n-1}$~两边令~$n\to\infty$, 有~$a=a/2$, 故~$a=0$~或~$1$. 由~3~题可知, $a$~不大于~$\{x_n\}$~的任意一项, 故~$\lim\limits_{n\to\infty} x_n=a$.\qedhere
+	      \end{proof}
+	\item 设~$a_n=\dfrac{10}{1}\cdot\dfrac{11}{3}\cdots\dfrac{n+9}{2n-1}, n\in\mathbf{N}_{+}$, 求数列~$\{a_n\}$~的极限.
+	      \begin{proof}
+		      易知~$\forall n\in\mathbf{N}_{+}, a_n>0$, 且~$\dfrac{x_n}{x_{n-1}}=\dfrac{n+9}{2n-1}<1, \forall n\in\mathbf{N}_{+}, n>10$. $\{x_n\}$~从第~$11$~项起单调递减有下界, 故极限存在, 设为~$a$, 在递推式~$x_n=\dfrac{n+9}{2n-1}x_{n-1}$~两边令~$n\to\infty$, 有~$a=a/2$, 故~$a=0$~或~$1$. 同上题推理有~$\lim\limits_{n\to\infty} a_n=0$.\qedhere
+	      \end{proof}
+	\item 在例题~2.2.6~的基础上证明: 当~$p>1$~时数列~$\{S_n\}$~收敛, 其中
+	      \[S_n=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{n^p}, n\in\mathbf{N}_{+}.\]
+	      \begin{proof}
+		      对于~$\forall n\in\mathbf{N}_{+}$, $\exists k\in\mathbf{N}_{+}$~使得~$2^{k-1}<n<2^{k}$, 故
+		      \[
+			      \begin{split}
+				      S_n\leqslant & S_{2^k-1}=1+\dfrac{1}{2^p}+\dfrac{1}{3^p}+\cdots+\dfrac{1}{(2^n-1)^p}                                                                                         \\
+				      \leqslant        & 1+\left(\dfrac{1}{2^p}+\dfrac{1}{2^p}\right)+\cdots+\left(\dfrac{1}{(2^{k-1})^p}+\dfrac{1}{(2^{k-1})^p}\cdots+\dfrac{1}{(2^{k-1})^p}\right) \\
+				      =                & 1+2^{1-p}+2^{2(1-p)}+\cdots+2^{(k-1)(1-p)}                                                                                                    \\
+				      =                & \dfrac{1-2^{k(1-p)}}{1-2^{1-p}}\leqslant \dfrac{1}{1-2^{1-p}}
+			      \end{split}
+		      \]
+		      这表明~$\{S_n\}$~有界, 又显然~$\{S_n\}$~单调递增, 故由单调有界原理知~$\{S_n\}$~收敛.\qedhere
+	      \end{proof}
+	\item 设~$0<x_0<\dfrac{\pi}{2}, x_n=\sin{x_{n-1}}, n\in\mathbf{N}_{+}$, 证明: $\{x_n\}$~收敛, 并求其极限.
+	      \begin{proof}
+		      $\sin{x}<x, \forall x\in(0,\dfrac{\pi}{2}$, 故由数学归纳法易知~$x_n=\sin{x_{n-1}}<x_{n-1}, n=1, 2,\cdots$, 即~$\{x_n\}$~单调递减; 又由~$x_0>0$~易知~$x_n>0, n=1,2,\cdots$, 即~$0$~是~$\{x_n\}$~的下界. 由单调有界原理, $\{x_n\}$~收敛. 设~$\lim\limits_{n\to\infty} x_n=\xi$, 在~$x_n=\sin{x_{n-1}}$~两边令~$n\to\infty$, 注意~$\sin{x}$~是其定义域上的连续函数, 由~Heine~定理及极限的保序性, $\xi=\sin{\xi}, \xi\in[0,\pi/2]$, 故~$\xi=0$.\qedhere
+	      \end{proof}
+	\item 设~$a_n=\left[\dfrac{(2n-1)!!}{(2n)!!}\right]^2, n\in\mathbf{N}_{+}$, 证明: $\{a_n\}$~收敛于~$0$.\\
+	      (观察~$a_n=\left(\dfrac{1\cdot3}{2\cdot2}\right)\left(\dfrac{3\cdot5}{4\cdot4}\right)\cdots\left(\dfrac{(2n-3)(2n-1)}{(2n-2)(2n-2)}\right)\left(\dfrac{2n-1}{(2n)^2}\right)$.)
+	      \begin{proof}
+		      \[0\leqslant a_n=\left(\dfrac{1\cdot3}{2\cdot2}\right)\left(\dfrac{3\cdot5}{4\cdot4}\right)\cdots\left(\dfrac{(2n-3)(2n-1)}{(2n-2)(2n-2)}\right)\left(\dfrac{2n-1}{(2n)^2}\right).\]
+		      由平均值不等式可知~$(2n-3)(2n-1)\leqslant\left(\dfrac{(2n-3)+(2n-1)}{2}\right)^2=(2n-2)^2$, 即~$\dfrac{(2n-3)(2n-1)}{(2n-2)(2n-2)}\leqslant 1$, 于是~$0\leqslant a_n\leqslant\dfrac{2n-1}{4n^2}\to 0\ (n\to\infty)$. 故由夹逼定理知~$\lim\limits_{n\to\infty} a_n=0$.\qedhere
+	      \end{proof}
+	\item 设~$a_n=\left[\dfrac{(2n)!!}{(2n-1)!!}\right]^2\cdot\dfrac{1}{2n+1}, n\in\mathbf{N}_{+}$, 证明: $\{a_n\}$~收敛.\\
+	      (方法与上一题类似. 在学了积分学后将于命题~$11.4.1$~中求出上述数列的极限为~$\dfrac{\pi}{2}$. 这就是~Wallis~公式.)
+	      \begin{proof}
+		      \[
+			      \begin{split}
+				      a_n=&\left[\dfrac{(2n)!!}{(2n-1)!!}\right]^2\cdot\dfrac{1}{2n+1}=\left(\dfrac{2\cdot4\cdot6\cdots2n}{1\cdot3\cdot5\cdots(2n-1)}\right)^2\cdot\dfrac{1}{2n+1}\\
+				      =&\left(\dfrac{2}{1^2}\right)\left(\dfrac{2\cdot4}{3^2}\right)\left(\dfrac{4\cdot6}{5^2}\right)\cdots\left(\dfrac{(2n-2)(2n)}{(2n-1)^2}\right)\cdot\dfrac{2n}{2n+1}\leqslant2.
+			      \end{split}
+		      \]
+		      其中用到了基本不等式~$(2n-2)(2n)\leqslant\left(\dfrac{(2n-2)+(2n)}{2}\right)^2=(2n-1)^2$, 即~$\dfrac{(2n-2)(2n)}{(2n-1)^2}\leqslant 1$, 于是~$\{a_n\}$~有上界; 又由
+		      \[\dfrac{a_n}{a_{n-1}}=\left(\dfrac{2n}{2n-1}\right)^2\dfrac{2n-1}{2n+1}=\dfrac{4n^2}{4n^2-1}\geqslant 1.\]
+		      故~$\{a_n\}$~单调增加. 由单调有界原理知~$\{a_n\}$~收敛.\qedhere
+
+	      \end{proof}
+	\item 下列数列中, 哪些是单调的?
+	      \begin{tabenum}[(1)]
+		      \item $\left\{\dfrac{1}{1+n^2}\right\}$; \item $\{\sin{n}\}$;	\item $\{\sqrt[n]{n!}\}$.
+	      \end{tabenum}
+	      \begin{proof}
+		      \begin{enumerate}[(1)]
+			      \item $\dfrac{a_n}{a_{n-1}}=\dfrac{1+(n-1)^2}{1+n^2}\leqslant 1$, 故~$\{a_n\}$~单调减少;
+			      \item 由于~$\{\sin{n}\}$~有界, 若其单调, 则~$\{\sin{n}\}$~收敛, 而已知其发散, 故不单调;
+			      \item 由于~$n!<(n+1)^n$, 故~$(n!)^{n+1}<(n!)^n(n+1)^n$, 不等式两边开~$n(n+1)$~次根号, 就有~$\sqrt[n]{n!}<\sqrt[n+1]{n!}\cdot\sqrt[n+1]{n+1}=\sqrt[n+1]{(n+1)!}$, 故~$\{\sqrt[n]{n!}\}$~单调增加.\qedhere
+		      \end{enumerate}
+	      \end{proof}
+	\item 证明: 单调数列~$\{a_n\}$~收敛的充分必要条件是它有一个收敛子列.
+	\item 对每个自然数~$n$, 用~$x_n$~表示方程~$x+x^2+\cdots+x^n=1$~在闭区间~$[0,1]$~中的根. 求~$\lim\limits_{n\to\infty} x_n$.
 \end{enumerate}
 \end{document}
